# plebfi-workshop-template

./: Cargo.toml  README.md
src/: main.rs
templates/: done.html.tera  error.html.tera  index.html.tera
