[package]
name = "pleb-fi-workshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.27.0"
base64 = "0.13"
bdk = { version = "0.17.0", features = ["use-esplora-ureq"] }
rocket = "0.5.0-rc.1"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = [ "tera" ] }
